# QRLite

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-android-bundle.sh  conanfile.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-push-devcontainer.yml  ci.yml
QRLiteApp/: CMakeLists.txt
QRLiteApp/android/: AndroidManifest.xml
QRLiteApp/src/: ClipboardBridge.cpp  ClipboardBridge.h  CollageImageProvider.cpp  CollageImageProvider.h  PermissionChecker.cpp  PermissionChecker.h  main.cpp
QRLiteApp/src/qml/: PermissionCheck.qml  PermissionDenied.qml  QRLiteSettings.qml  Settings.qml  main.qml  qml.qrc
QRLiteApp/src/qml/images/: QRLite.xcf  logo.xcf
QRLiteLib/: CMakeLists.txt
QRLiteLib/include/QRLite/: CodeReader.h  CodeWriter.h  Scanner.h  project.h  scanner.h
QRLiteLib/src/: CodeParser.cpp  CodeParser.h  CodeReader.cpp  CodeWriter.cpp  Scanner.cpp  project.cpp  scanner.cpp
QRLiteLib/test/: CMakeLists.txt
QRLiteLib/test/src/: codeparser_test.cpp  codewriter_test.cpp  project_test.cpp  scanner_test.cpp  test_assets.qrc
SimpleCollageApp/: CMakeLists.txt
SimpleCollageApp/src/: CollageImageProvider.cpp  CollageImageProvider.h  main.cpp
SimpleCollageApp/src/qml/: main.qml  qml.qrc
SimpleCollageLib/: CMakeLists.txt
SimpleCollageLib/include/SimpleCollage/: project.h
SimpleCollageLib/src/: blank.cpp  project.cpp
SimpleCollageLib/test/: CMakeLists.txt
SimpleCollageLib/test/src/: example_test.cpp  project_test.cpp  test_assets.qrc
